--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
 JWTPRIVATEKEY="dekrupshop5555$"
 JWT="DEKRUP5555"
 TOKEN_TIME_EXP="1d"
+GOOGLE_DRIVE_CLIENT_ID="207107867268-78trlo8fntada14bfjdq33qlq8qjmgsr.apps.googleusercontent.com"
+GOOGLE_DRIVE_CLIENT_SECRET="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"
+GOOGLE_DRIVE_REDIRECT_URI="https://developers.google.com/oauthplayground"
+GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57XrdlMiC-Sv_kRNwlNosQEhgRSPijew4-f26kTQUHS8D8Tyu3btKDs"
 
 # DEVELOPMENT
 SERVICE="development"
 DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
 PORT=9060
+GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
