--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ GOOGLE_DRIVE_REDIRECT_URI="https://developers.google.com/oauthplayground"
 GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57XrdlMiC-Sv_kRNwlNosQEhgRSPijew4-f26kTQUHS8D8Tyu3btKDs"
 
 #production
-SERVICE="production"
-DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
-PORT=9060
-GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
-
-#developer
-# SERVICE="development"
-# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+# SERVICE="production"
+# DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
 # PORT=9060
 # GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
+
+#developer
+SERVICE="development"
+DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+PORT=9060
+GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
