--- a/.env
+++ b/.env
@@ -9,11 +9,16 @@ GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57Xr
 #production
 # SERVICE="production"
 # DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
+# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop-Dev?retryWrites=true&w=majority"
 # PORT=9060
-# GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
+# GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
 
 #developer
 SERVICE="development"
-DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop-Dev?retryWrites=true&w=majority"
+# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
 PORT=9060
-GOOGLE_DRIVE_IMAGE_PRODUCT="1h5cVfA1NNSHSxB4nn5ZY6aYkqK9VQNbX"
+GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
+
+
+
