--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57Xr
 
 #developer
 SERVICE="development"
-DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop-Dev?retryWrites=true&w=majority"
+DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
 # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
 PORT=9060
 GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
