--- a/.env
+++ b/.env
@@ -10,18 +10,17 @@ LINE_TOKEN_REGISTER="CaaHbDcWqi4GvBFiaXpGBkkTWdAzFRSdr5VlYlihjlI"
 LINE_TOKEN_ORDER="Fq9Y10EUnWmm9JJFm2vBsnWeMBqRM9EyNLBhBiflN0i"
 
 #production
-# SERVICE="production"
-# DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
-# # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop-Dev?retryWrites=true&w=majority"
-# PORT=9060
-# GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
-
-#developer
-SERVICE="development"
-DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
-# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+SERVICE="production"
+DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
 PORT=9060
 GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
+
+#developer
+# SERVICE="development"
+# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
+# # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+# PORT=9060
+# GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
 
 
 
