--- a/.env
+++ b/.env
@@ -5,22 +5,22 @@ GOOGLE_DRIVE_CLIENT_ID="207107867268-78trlo8fntada14bfjdq33qlq8qjmgsr.apps.googl
 GOOGLE_DRIVE_CLIENT_SECRET="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"
 GOOGLE_DRIVE_REDIRECT_URI="https://developers.google.com/oauthplayground"
 GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57XrdlMiC-Sv_kRNwlNosQEhgRSPijew4-f26kTQUHS8D8Tyu3btKDs"
-LINE_URL="https://notify-api.line.me/api/notify"
-LINE_TOKEN_REGISTER="CaaHbDcWqi4GvBFiaXpGBkkTWdAzFRSdr5VlYlihjlI"
-LINE_TOKEN_ORDER="fv3beQ5ExhWv4uc0Ysm9t3sQkgNJcLg2ZdnaxYJG1GB"
+# LINE_URL="https://notify-api.line.me/api/notify"
+# LINE_TOKEN_REGISTER="CaaHbDcWqi4GvBFiaXpGBkkTWdAzFRSdr5VlYlihjlI"
+# LINE_TOKEN_ORDER="fv3beQ5ExhWv4uc0Ysm9t3sQkgNJcLg2ZdnaxYJG1GB"
 
 #production
-SERVICE="production"
-DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
-PORT=9060
-GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
-
-#developer
-# SERVICE="development"
-# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
-# # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+# SERVICE="production"
+# DB="mongodb+srv://dekrub:2uKG98Ie3T057ma1@db-nbadigitalservice-c204ed06.mongo.ondigitalocean.com/Dekrubshop?tls=true&authSource=admin&replicaSet=db-nbadigitalservice"
 # PORT=9060
 # GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
+
+#developer
+SERVICE="development"
+DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
+# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+PORT=9060
+GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
 
 
 
