--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ GOOGLE_DRIVE_CLIENT_ID="207107867268-78trlo8fntada14bfjdq33qlq8qjmgsr.apps.googl
 GOOGLE_DRIVE_CLIENT_SECRET="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"
 GOOGLE_DRIVE_REDIRECT_URI="https://developers.google.com/oauthplayground"
 GOOGLE_DRIVE_REFRESH_TOKEN="1//04LfTksEIPDKZCgYIARAAGAQSNwF-L9IruJFidrWNOrRr57XrdlMiC-Sv_kRNwlNosQEhgRSPijew4-f26kTQUHS8D8Tyu3btKDs"
-# LINE_URL="https://notify-api.line.me/api/notify"
-# LINE_TOKEN_REGISTER="CaaHbDcWqi4GvBFiaXpGBkkTWdAzFRSdr5VlYlihjlI"
-# LINE_TOKEN_ORDER="fv3beQ5ExhWv4uc0Ysm9t3sQkgNJcLg2ZdnaxYJG1GB"
+LINE_URL="https://notify-api.line.me/api/notify"
+LINE_TOKEN_REGISTER="CaaHbDcWqi4GvBFiaXpGBkkTWdAzFRSdr5VlYlihjlI"
+LINE_TOKEN_ORDER="fv3beQ5ExhWv4uc0Ysm9t3sQkgNJcLg2ZdnaxYJG1GB"
 
 #production
 SERVICE="production"
