--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
 #developer
 # SERVICE="development"
 # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrub-Shop-Dev?retryWrites=true&w=majority"
-# # DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
+# DB="mongodb+srv://nbadigitalservice:nbadigitalservice@cluster0.vhlqr.mongodb.net/Dekrup-Shop?retryWrites=true&w=majority"
 # PORT=9060
 # GOOGLE_DRIVE_IMAGE_PRODUCT="1ClG4add-dbfT86LUXwXquJ_VPHylO9f9"
 
